--- a/package.json
+++ b/package.json
@@ -4,5 +4,15 @@
   "repository": "https://github.com/AcalaNetwork/scripts.git",
   "author": "Acala developers <hello@acala.network>",
   "license": "Apache-2.0",
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.0",
+  "dependencies": {
+    "@acala-network/api": "^4.0.1",
+    "@acala-network/types": "^4.0.1",
+    "@polkadot/api": "^7.14.3"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.23",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
+  }
 }
