--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   },
   "dependencies": {
     "@acala-network/api": "^4.0.1",
+    "@acala-network/sdk": "^4.0.1",
+    "@acala-network/sdk-core": "^4.0.1",
+    "@acala-network/sdk-wallet": "^4.0.1",
     "@acala-network/types": "^4.0.1",
-    "@polkadot/api": "^7.14.3"
+    "@open-web3/util": "^1.1.3",
+    "@polkadot/api": "^7.14.3",
+    "bn.js": "^5.2.0",
+    "dotenv": "^16.0.0",
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
