--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@polkadot/api": "^7.14.3",
     "bn.js": "^5.2.0",
     "dotenv": "^16.0.0",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "yargs": "^17.4.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
+    "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
