--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable"
   },
+  "resolutions": {
+    "@polkadot/api-derive": "^7.14.4-2",
+    "@polkadot/api": "^7.14.4-2",
+    "@polkadot/rpc-core": "^7.14.4-2",
+    "@polkadot/typegen": "^7.14.4-2",
+    "@polkadot/types-codec": "^7.14.4-2",
+    "@polkadot/types": "^7.14.4-2"
+  },
   "dependencies": {
     "@acala-network/api": "^4.0.1",
     "@acala-network/sdk": "^4.0.1",
@@ -19,7 +27,7 @@
     "@acala-network/sdk-wallet": "^4.0.1",
     "@acala-network/types": "^4.0.1",
     "@open-web3/util": "^1.1.3",
-    "@polkadot/api": "^7.14.3",
+    "@polkadot/api": "^7.14.4-2",
     "bn.js": "^5.2.0",
     "dotenv": "^16.0.0",
     "rxjs": "^7.5.5",
