--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@polkadot/types": "^7.14.4-2"
   },
   "dependencies": {
-    "@acala-network/api": "^4.0.1",
-    "@acala-network/sdk": "^4.0.1",
-    "@acala-network/sdk-core": "^4.0.1",
-    "@acala-network/sdk-wallet": "^4.0.1",
-    "@acala-network/types": "^4.0.1",
+    "@acala-network/api": "^4.0.4-4",
+    "@acala-network/sdk": "^4.0.4-4",
+    "@acala-network/sdk-core": "^4.0.4-4",
+    "@acala-network/sdk-wallet": "^4.0.4-4",
+    "@acala-network/types": "^4.0.4-4",
+    "@fast-csv/format": "^4.3.5",
     "@open-web3/util": "^1.1.3",
     "@polkadot/api": "^7.14.4-2",
     "bn.js": "^5.2.0",
