--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@polkadot/api": "^7.14.4-2",
     "bn.js": "^5.2.0",
     "dotenv": "^16.0.0",
+    "moment": "^2.29.2",
     "rxjs": "^7.5.5",
     "yargs": "^17.4.0"
   },
