--- a/package.json
+++ b/package.json
@@ -13,22 +13,25 @@
     "postpublish": "pinst --enable"
   },
   "resolutions": {
-    "@polkadot/api-derive": "^7.14.4-2",
-    "@polkadot/api": "^7.14.4-2",
-    "@polkadot/rpc-core": "^7.14.4-2",
-    "@polkadot/typegen": "^7.14.4-2",
-    "@polkadot/types-codec": "^7.14.4-2",
-    "@polkadot/types": "^7.14.4-2"
+    "@polkadot/api-augment": "^8.5.1",
+    "@polkadot/api-derive": "^8.5.1",
+    "@polkadot/api": "^8.5.1",
+    "@polkadot/rpc-core": "^8.5.1",
+    "@polkadot/rpc-augment": "^8.5.1",
+    "@polkadot/typegen": "^8.5.1",
+    "@polkadot/types-augment": "^8.5.1",
+    "@polkadot/types-codec": "^8.5.1",
+    "@polkadot/types": "^8.5.1"
   },
   "dependencies": {
-    "@acala-network/api": "^4.0.4-4",
-    "@acala-network/sdk": "^4.0.4-4",
-    "@acala-network/sdk-core": "^4.0.4-4",
-    "@acala-network/sdk-wallet": "^4.0.4-4",
-    "@acala-network/types": "^4.0.4-4",
+    "@acala-network/api": "^4.1.3",
+    "@acala-network/sdk": "^4.1.3",
+    "@acala-network/sdk-core": "^4.1.3",
+    "@acala-network/sdk-wallet": "^4.1.3",
+    "@acala-network/types": "^4.1.3",
     "@fast-csv/format": "^4.3.5",
-    "@open-web3/util": "^1.1.3",
-    "@polkadot/api": "^7.14.4-2",
+    "@open-web3/util": "^1.1.4",
+    "@polkadot/api": "^8.5.1",
     "bn.js": "^5.2.0",
     "dotenv": "^16.0.0",
     "moment": "^2.29.2",
