--- a/package.json
+++ b/package.json
@@ -24,36 +24,36 @@
     "@polkadot/types": "^8.5.1"
   },
   "dependencies": {
-    "@acala-network/api": "^4.1.3",
-    "@acala-network/sdk": "^4.1.3",
-    "@acala-network/sdk-core": "^4.1.3",
-    "@acala-network/sdk-wallet": "^4.1.3",
-    "@acala-network/types": "^4.1.3",
+    "@acala-network/api": "^4.1.5",
+    "@acala-network/sdk": "^4.1.5",
+    "@acala-network/sdk-core": "^4.1.5",
+    "@acala-network/sdk-wallet": "^4.1.5",
+    "@acala-network/types": "^4.1.5",
     "@fast-csv/format": "^4.3.5",
     "@open-web3/util": "^1.1.4",
-    "@polkadot/api": "^8.5.1",
-    "bn.js": "^5.2.0",
-    "dotenv": "^16.0.0",
-    "moment": "^2.29.2",
+    "@polkadot/api": "^8.8.1",
+    "bn.js": "^5.2.1",
+    "dotenv": "^16.0.1",
+    "moment": "^2.29.3",
     "rxjs": "^7.5.5",
-    "yargs": "^17.4.0"
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
-    "@types/node": "^17.0.23",
+    "@types/node": "^17.0.42",
     "@types/yargs": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "eslint": "^8.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "husky": ">=6",
-    "lint-staged": ">=10",
-    "pinst": ">=2",
-    "prettier": "^2.6.1",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.1",
+    "pinst": "^3.0.0",
+    "prettier": "^2.6.2",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "prettier": {
     "tabWidth": 2,
