--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^16.0.1",
     "graphql-request": "^4.3.0",
     "moment": "^2.29.4",
+    "mongoose": "^6.5.2",
     "rxjs": "^7.5.6",
     "yargs": "^17.5.1"
   },
